# Simple-TrajOpt

./: AGENTS.md  CMakeLists.txt  README.md
examples/: basic_example.cpp  catching_perching_compare.cpp  perching_comparison.cpp  precision_test.cpp  simple_comparison.cpp  simple_perching_test.cpp
include/: catching_optimizer.h  perching_optimizer.h  simple_catching.h  simple_perching.h  simple_trajectory.h  simple_trajopt.h  traj_opt_perching_v1.h
scripts/: advanced_python_example.py  catching_summary.py  import_utils.py  test_catching_optimizer.py  test_initial_guess.py  test_python_bindings.py  trajectory_summary.py  visualize_catching.py  visualize_trajectories.py
src/: catching_optimizer_api.cc  perching_optimizer_api.cc  simple_catching_api.cc
